# CppToJavaCompiler

./: CMakeLists.txt  README.md  compiler.txt  structure.txt
input/: Test1.cpp
src/: CMakeLists.txt  main.cpp
src/codegen/: CodeGenerator.cpp  CodeGenerator.h  JavaEmitter.cpp  JavaEmitter.h  OutputWriter.cpp  OutputWriter.h
src/lexer/: Lexer.cpp  Lexer.h  Token.cpp  Token.h  TokenTypes.h
src/parser/: ASTNode.cpp  ASTNode.h  ASTPrinter.cpp  ASTPrinter.h  Parser.cpp  Parser.h  SymbolTable.cpp  SymbolTable.h  TypeChecker.cpp  TypeChecker.h
src/utils/: ErrorHandler.cpp  ErrorHandler.h  FileReader.cpp  FileReader.h  Logger.cpp  Logger.h
tests/: CMakeLists.txt  test.cpp  test_sample.cpp
